# qibojit

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  requirements.txt  selfhosted  setup.py
.github/: .codecov.yml
.github/workflows/: deploy.yml  rules.yml  selfhosted.yml  wheels.yml
benchmarks/: abstract.py  backends.py  main.py  utils.py
ops/cupy/: __init__.py  kernels.cu.cc
src/qibo_sim_numba_cupy/: custom_operators.py  ops.py
src/qibo_sim_numba_cupy/custom_operators/: __init__.py
src/qibo_sim_numba_cupy/tests/: test_custom_operators.py  test_one_qubit_gates.py  test_two_qubit_gates.py  utils.py
src/qibojit/: __init__.py  backends.py  engines.py  matrices.py
src/qibojit/backends/: .#clifford_operations_cpu.py  __init__.py  clifford.py  clifford.py~  clifford_cpu.py  clifford_gpu.py  clifford_operations_cpu.py  clifford_operations_gpu.py  cpu.py  gpu.py  matrices.py  multinode.py
src/qibojit/cupy/: kernels.cu.cc
src/qibojit/custom_operators/: __init__.py  backend.py  backends.py  cu_gates.py  cu_ops.py  engines.py  gates.cu.cc  gates.hip.cc  gates.py  kernel_helpers.cpp  kernels.py  matrices.py  one_qubit_gates.py  ops.cu.cc  ops.py  platforms.py  quantum_info.py  raw_kernels.py  state_ops.py  two_qubit_gates.py
src/qibojit/tests/: __init__.py  conftest.py  test_backends.py  test_gates.py  test_one_qubit_gates.py  test_ops.py  test_platforms.py  test_state_ops.py  test_two_qubit_gates.py  utils.py
tests/: conftest.py  test_backends.py  test_gates.py  test_ops.py  utils.py
